# KittyPress-App

./: README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/deepion/kittypress/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  archive.cpp  archive.h  compress.cpp  compress.h  kitty.h  kp_log.h  native-lib.cpp  progress.h
app/src/main/java/com/deepion/kittypress/: KittyPressNative.kt  MainActivity.kt  NativeProgress.kt  SplashActivity.kt
app/src/main/res/drawable/: kitty_button.xml  main_background_gradient.xml
app/src/main/res/drawable-night/: kitty_button.xml  main_background_gradient.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml  styles.xml
app/src/test/java/com/deepion/kittypress/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
